# openswitch-ops-quagga

./: .gitreview  BGP_DESIGN.md  DESIGN.md  configure.ac  groups  project.config  reviewers.config
bgpd/: .gitignore  Makefile.am  bgp_attr.h  bgp_backend_functions.c  bgp_backend_functions.h  bgp_community.c  bgp_community.h  bgp_debug.c  bgp_debug.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_filter.c  bgp_filter.h  bgp_fsm.c  bgp_main.c  bgp_mpath.c  bgp_network.c  bgp_nexthop.c  bgp_nexthop.h  bgp_ovsdb_if.c  bgp_ovsdb_if.h  bgp_ovsdb_route.c  bgp_ovsdb_route.h  bgp_packet.c  bgp_route.c  bgp_route.h  bgp_zebra.c  bgp_zebra.h  bgpd.c  bgpd.h
bgpd/test/: _disabled_test_bgpd_ct_network_cfg.py  _disabled_test_bgpd_ct_routemap_in.py  _disabled_test_bgpd_ct_router_cfg.py  _disabled_test_bgpd_ct_router_id_cfg.py  _disabled_test_bgpd_ft_route_advertise_with_hosts.py  bgpconfig.py  setup_basic_bgp_with_peer.py  test_bgp_ct_show_bgp_neighbors.py  test_bgpd_ct_basic_bgp_route_advertise.py  test_bgpd_ct_maximum_paths.py  test_bgpd_ct_neighbor_password.py  test_bgpd_ct_network_cfg.py  test_bgpd_ct_no_neighbor.py  test_bgpd_ct_no_neighbor_password.py  test_bgpd_ct_peergroup.py  test_bgpd_ct_routemap.py  test_bgpd_ct_show_running_config.py  test_bgpd_ct_timers_cfg.py  test_bgpd_ft_neighbor_password.py  test_bgpd_ft_routemaps_with_hosts_ping.py  test_neighbor_peer_remove_private_as.py  vtyshutils.py
bgpd/tests/: setup_basic_bgp_with_peer.py  test_quagga_ct_bgpd_maximum_paths.py  test_quagga_ct_bgpd_router_bgp.py  test_quagga_ct_bgpd_router_id.py  test_quagga_ct_bgpd_show_ip_bgp.py  test_quagga_ft_bgpd_basic_bgp_route_advertise.py  test_quagga_ft_bgpd_neighbor_remove_private_as.py  test_quagga_ft_bgpd_no_neighbor.py  test_quagga_ft_bgpd_peergroup.py  test_quagga_ft_bgpd_route_advertise_with_hosts_ping.py  test_quagga_ft_bgpd_routemap.py  test_quagga_ft_bgpd_routemaps_with_hosts_ping.py  vtyshutils.py
docs/: quagga_test.md
lib/: Makefile.am  command.c  command.h  log.c  plist.c  plist.h  policy_ovsdb.c  policy_ovsdb.h  prefix.c  prefix.h  routemap.c  routemap.h  table.h  thread.c
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ospfd/: Makefile.am  ospf_ase.c  ospf_dump.c  ospf_dump.h  ospf_interface.c  ospf_ism.c  ospf_ism.h  ospf_lsa.c  ospf_main.c  ospf_neighbor.c  ospf_nsm.c  ospf_ovsdb_if.c  ospf_ovsdb_if.h  ospf_packet.c  ospf_spf.c  ospfd.c  (+2 more)
zebra/cli/: Makefile.am  l3routes_vty.c  l3routes_vty.h  vtysh_ovsdb_l3routes_context.c  vtysh_ovsdb_l3routes_context.h
(+213 files in other folders)
